--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@ var simpleLikes = {"ajaxurl":"https:\/\/ontelmobile.ae\/wp-admin\/admin-ajax.php
 							<li class="elementor-icon-list-item elementor-inline-item">
 											<span class="elementor-icon-list-icon">
 							<i aria-hidden="true" class="fas fa-check"></i>						</span>
-										<span class="elementor-icon-list-text">Believe in Something Better!</span>
+										<span class="elementor-icon-list-text">Electronics that makes life easier!</span>
 									</li>
 						</ul>
 				</div>
