--- a/index.html
+++ b/index.html
@@ -326,12 +326,17 @@ var simpleLikes = {"ajaxurl":"https:\/\/ontelmobile.ae\/wp-admin\/admin-ajax.php
 				<div class="elementor-widget-container">
 					<div class="elementor-social-icons-wrapper elementor-grid">
 							<span class="elementor-grid-item">
-					<a class="elementor-icon elementor-social-icon elementor-social-icon-twitter elementor-repeater-item-4bf2890" href="#" target="_blank">
+					<a class="elementor-icon elementor-social-icon elementor-social-icon-twitter elementor-repeater-item-4bf2890" href="https://twitter.com/farasalbarq" target="_blank">
 						<span class="elementor-screen-only">Twitter</span>
 						<i class="fab fa-twitter"></i>					</a>
 				</span>
 							<span class="elementor-grid-item">
-					<a class="elementor-icon elementor-social-icon elementor-social-icon-facebook-f elementor-repeater-item-a79d483" href="#" target="_blank">
+					<a class="elementor-icon elementor-social-icon elementor-social-icon-pinterest-pelementor-repeater-item-2faf370" href="https://www.pinterest.com/farasalbarq" target="_blank">
+						<span class="elementor-screen-only">Pinterest-p</span>
+						<i class="fab fa-pinterest-p"></i>					</a>
+				</span>
+							<span class="elementor-grid-item">
+					<a class="elementor-icon elementor-social-icon elementor-social-icon-facebook-f elementor-repeater-item-a79d483" href="https://www.facebook.com/farasalbarq" target="_blank">
 						<span class="elementor-screen-only">Facebook-f</span>
 						<i class="fab fa-facebook-f"></i>					</a>
 				</span>
@@ -341,10 +346,11 @@ var simpleLikes = {"ajaxurl":"https:\/\/ontelmobile.ae\/wp-admin\/admin-ajax.php
 						<i class="fab fa-linkedin-in"></i>					</a>
 				</span>
 							<span class="elementor-grid-item">
-					<a class="elementor-icon elementor-social-icon elementor-social-icon-instagram elementor-repeater-item-2faf370" href="#" target="_blank">
+					<a class="elementor-icon elementor-social-icon elementor-social-icon-instagram elementor-repeater-item-2faf370" href="https://www.instagram.com/farasalbarqelectronics" target="_blank">
 						<span class="elementor-screen-only">Instagram</span>
 						<i class="fab fa-instagram"></i>					</a>
 				</span>
+							
 					</div>
 				</div>
 				</div>
